infra/kube-prometheus-stack/ingressroute.yaml
# expose traefik dashboard and grafana console
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.lab.vino9.org`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(`grafana.lab.vino9.org`)
      services:
        - name: prometheus-grafana
          namespace: monitoring
          passHostHeader: true
          port: 80
          scheme: http
